main.css
* {
border: 0;
box-sizing: border-box;
margin: 0;
padding: 0;
}

body {
  font-family: "Open Sans", serif;
  font-size: 12px;
}

/* Header */

#input-container {
  background-color: #E5F3F2 ;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

#input-content,
footer {
  margin: auto;
  width: 70%;
}

h1 {
  color: #00A79D ;
  font-family: "Roboto Slab", serif;
  font-size: 3rem;
  margin: 3% auto 3% auto;
  text-align: center;
}

#h1-style {
  color: #6D6E71 ;
}

input {
  border: solid #D1D3D4 0.5px;
  box-shadow: 0 0 0 0.1rem #BBBDBF; 
  color: #000000 ;
  font-size: 1.5rem;
  letter-spacing: 0.05rem;
  margin: 0 0 2% 0;
  padding: 0.2% 1.5% 0.2% 1%;
  width: 100%;
}

input::placeholder {
  color: #939598 ;
}

#save-button {
  background-color: #00A79D ;
  color: #FFFFFF ;
  font-size: 1.5rem;
  /*margin: 0 0 3% 0;*/
  padding: 1% 0;
  width: 100%;
}

/* Spacer provides margin for bottom section */

#spacer {
  margin-bottom: 14rem;
  margin-top: 14.4%;
}

/* Filter Menu/Submenu */

#filter-container {
  padding: 2% 0 2% 0;
}

#main-menu {
  align-content: center;
  display: flex;
  margin: auto;
  width: 100%;
}

#main-menu button {
  background-color: #00A79D ;
  border: solid #D1D3D4 0.5px;
  box-shadow: 0 0 0 0.1rem #BBBDBF; 
  color: #FFFFFF ;
  font-size: 1rem;
  height: 2.5rem;
  padding: 0.43rem;
  width: 34%;
}

#search-container {
  margin: auto;
  text-align: center;
  width: 100%;
}

#search-input {
  border: 2px solid #E5F3F2;
  font-size: 1.3rem;
  margin: 0;
  padding: 0.3rem;
  width: 100%;
}

#importance-filter-container {
  display: flex;
  justify-content: space-between;
  margin: auto;
  width: 100%;
}

.importance-filter-button {
  background-color: #00A79D;
  color: #FFFFFF;
  font-size: 1.3rem;
  margin: 0 0 0 0;
  padding: 0.4rem;
  width: 20%;
}

#show-completed-container {
  border: solid #D1D3D4 0.5px;
  box-shadow: 0 0 0 0.1rem #BBBDBF; 
  margin: auto;
  padding: 0.38rem;
  text-align: center;
  width: 100%;
}

#show-completed-container label {
  color: #939598;
  font-size: 1.15rem;
}

#show-completed-tasks {
  box-shadow: none;
  height: 25px;
  margin: 0 0 0 0;
  position: relative;
  top: 2px;
  vertical-align: bottom;
  width: 25px;
}

#show-more-button {
  background-color: #00A79D;
  color: #FFFFFF;
  font-size: 1.5rem;
  margin: 0 0 3% 0;
  padding: 1% 0;
  width: 100%;
}

/* Psuedo classes (hide, inactive, disable) */

#search-container.hidden,
#importance-filter-container.hidden,
#show-completed-container.hidden {
  display: none;
}

#save-button:disabled,
#text-filter.inactive,
#importance-filter.inactive,
#completed-filter.inactive,
.importance-filter-button.inactive,
#show-more-button:disabled {
  background-color: #F5F5F5;
  color: #00A79D;
}

#save-button:hover,
#main-menu button:hover,
.importance-filter-button:hover,
#show-more-button:hover {
  background-color: #045e55;
  color: #FFFFFF;
}

/* To Do Box Main Elements */

#task-container {
  align-items: center;
  display: flex;
  flex-direction: column;
}

.task-element {
  position: relative;
  width: 70%;
}

h2 {
  color: #6D6E71 ;
  display: inline-block;
  font-family: "Roboto Slab", serif;
  font-size: 1.5rem;
  font-weight: 700;
  max-width: 90%;
}

.task-description {
  color: #939598 ;
  display: inline-block;
  font-size: 1.2rem;
  margin: 0 0 1rem 0;
  max-width: 90%;
  text-align: justify;
  word-wrap: break-word;
}

h3 {
  color: #6D6E71 ;
  display: inline-block;
  font-family: "Roboto Slab", serif;
  font-size: 1rem;
  font-weight: 700;
  line-height: 24px;
  margin: 0 0.5rem 0 0;
  vertical-align: top;
}

.importance-value {
  font-family: "Open Sans", serif;
  font-weight: 400;
  line-height: 24px;
}

.task-complete-label {
  float: right;
}

.task-complete {
  box-shadow: none;
  float: right;
  height: 25px;
  margin: 0 0 2% 2%;
  width: 28px;
}

hr {
  background-color: #D1D3D4;
  border: none;
  height: 1px;
  margin: 1rem 0 1rem 0;
}

/* To Do Box Buttons */

article button {
  display: inline-block;
  height: 25px;
  margin: 0 2% 0 0;
  padding: 0 0 0 0;
  width: 25px;
}

.delete-button {
  background: url("images/delete.svg") no-repeat;
  margin: 0 0 0 0;
  position: absolute;
  right: 0.55rem;
  top: 0.35rem;
}

.importance-up-button {
  background: url("images/upvote.svg") no-repeat;
} 

.importance-down-button {
  background: url("images/downvote.svg") no-repeat;
}

.delete-button:hover {
  background: url("images/delete-hover.svg") no-repeat;
}

.importance-up-button:hover {
  background: url("images/upvote-hover.svg") no-repeat;
}

.importance-down-button:hover {
  background: url("images/downvote-hover.svg") no-repeat;
}

@media screen and (max-width: 720px) {

  #input-content,
  footer {
    width: 505px;
  }

  h1 {
    font-size: 2rem;
    margin: 2% auto 2% auto;
  }

  input {
    font-size: 1.2rem;
    margin: 1.1% 0 1.2% 0;
  }

  #save-button,
  #show-more-button {
    font-size: 1.2rem;
    margin: 1.1% 0 2% 0;
  }

  #spacer {
    font-size: 2rem;
    margin-top: 45px;    
  }

  #filter-container,
  #main-menu,
  #search-container,
  #importance-filter-container,
  #show-completed-container {
    margin: auto;
    width: 505px;
  }

  #filter-container {
    padding: 2% 0 3% 0;
  }

  #main-menu button,
  .task-importance-element,
  .task-details {
    font-size: 1rem;
  }

  .task-element {
    margin: 0 0 2% 1px;
    width: 505px;
  }

  h2 {
    font-size: 1.2rem;
  }

  .task-description {
    padding: 0 0 0.5rem 0;
  }

  h3 {
    font-size: 0.8rem;
    margin: 0 0.3rem 0 0;
  }

  article button {
    height: 20px;
    margin: 0 0.3rem 0 0;
    width: 20px;
  }

  .task-complete {
    height: 15px;
  }

  hr {
    margin: 0.5rem 0 1rem 0;
  }

}

@media screen and (max-width: 520px) {

  #input-content,
  #filter-container,
  #main-menu,
  #sub-menu,
  #search-container,
  #importance-filter-container,
  #show-completed-container,
  .task-element,
  footer,
  #show-more-button {
    width: 95vw;
  }

  #title-input
  #task-input,
  .task-element {
    margin: 0 0 2.5% 0;
  }

  #save-button {
    margin-bottom: 2%;
  }

  #spacer {
    font-size: 9rem;
    margin: 21% 0 0 0;
  }

  #filter-container {
    padding: 3% 0 3% 0;
  }
 
  #main-menu button {
    font-size: 0.8rem;
    padding: 1%;
  }

  #sub-menu {
    margin: auto;
  }

  #search-input {
    font-size: 1rem;
    margin: auto;
    padding: 1.2%;
  }

  .importance-filter-button {
    font-size: 0.8rem;
  }

  #show-completed-container {
    padding: 0.8%;
  }

  #show-completed-container label {
    font-size: 0.8rem;
  }

  #show-completed-tasks {
    height: 20px;
    width: 20px;
  }

}

@media screen and (max-width: 320px) {
 
  h1,
  #title-input,
  #task-input,
  #main-menu,
  #sub-menu,
  #search-container,
  #importance-filter-container,
  #show-completed-container,
  #save-button,
  .task-element {
    width: 300px;
  }

  #input-container,
  #input-content {
    height: 240px;
  }

  #title-input,
  #task-input,
  #save-button {
    font-size: 1.2rem;
    height: 25px;
    margin: 3px 0 3px 3px;
  }

  #save-button {
    height: 30px;
  }

  #filter-container {
    padding: 2% 0 5% 0;
  }

  #main-menu,
  #sub-menu {
    margin: 0 0 0 2px;
  }

  #sub-menu,
  #search-input {
    width: 300px;
  }
  
}

